// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalUserVoteItem /> should render correctly 1`] = `
<div
  className="form-group"
  id="questions_choice_panel_personal"
>
  <Connect(injectIntl(QuestionChoiceAdminModal))
    formName="formName"
    isCreating={true}
    member={null}
    onClose={[Function]}
    onSubmit={[Function]}
    show={false}
    type="type"
  />
  <ListGroup
    bsClass="list-group"
  />
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="primary"
    className="btn--outline box-content__toolbar"
    disabled={false}
    id="add-answer-in-question-button"
    onClick={[Function]}
  >
    <i
      className="fa fa-plus-circle"
    />
     
    <FormattedMessage
      id="global.add"
      values={Object {}}
    />
  </Button>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="primary"
    className="btn--outline box-content__toolbar ml-5"
    disabled={false}
    id="import_choices"
    onClick={[Function]}
  >
    <i
      className="fa fa-upload"
    />
     
    <FormattedMessage
      id="import"
      values={Object {}}
    />
  </Button>
</div>
`;

exports[`<ProposalUserVoteItem /> should render correctly modal to edit question 1`] = `
<div
  className="form-group"
  id="questions_choice_panel_personal"
>
  <Connect(injectIntl(QuestionChoiceAdminModal))
    formName="formName"
    isCreating={true}
    member="questions[0].choices[3]"
    onClose={[Function]}
    onSubmit={[Function]}
    show={false}
    type="type"
  />
  <ListGroup
    bsClass="list-group"
  />
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="primary"
    className="btn--outline box-content__toolbar"
    disabled={false}
    id="add-answer-in-question-button"
    onClick={[Function]}
  >
    <i
      className="fa fa-plus-circle"
    />
     
    <FormattedMessage
      id="global.add"
      values={Object {}}
    />
  </Button>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="primary"
    className="btn--outline box-content__toolbar ml-5"
    disabled={false}
    id="import_choices"
    onClick={[Function]}
  >
    <i
      className="fa fa-upload"
    />
     
    <FormattedMessage
      id="import"
      values={Object {}}
    />
  </Button>
</div>
`;

exports[`<ProposalUserVoteItem /> should render correctly modal to import file opened 1`] = `
<div
  className="form-group"
  id="questions_choice_panel_personal"
>
  <Connect(injectIntl(QuestionnaireAdminModalImportResponses))
    choices={
      Array [
        Object {
          "color": "red",
          "description": "thisisnotatest",
          "id": "1",
          "image": [Function],
          "title": "test",
        },
      ]
    }
    dispatch={[MockFunction]}
    fields={
      Object {
        "length": 1,
        "map": [MockFunction] {
          "calls": Array [
            Array [
              [Function],
            ],
            Array [
              [Function],
            ],
            Array [
              [Function],
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        },
        "remove": [MockFunction],
      }
    }
    formName="formName"
    oldMember="oldMember"
    onAdd={[Function]}
    onClose={[Function]}
    show={true}
    type="type"
  />
  <Connect(injectIntl(QuestionChoiceAdminModal))
    formName="formName"
    isCreating={true}
    member={null}
    onClose={[Function]}
    onSubmit={[Function]}
    show={false}
    type="type"
  />
  <ListGroup
    bsClass="list-group"
  />
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="primary"
    className="btn--outline box-content__toolbar"
    disabled={false}
    id="add-answer-in-question-button"
    onClick={[Function]}
  >
    <i
      className="fa fa-plus-circle"
    />
     
    <FormattedMessage
      id="global.add"
      values={Object {}}
    />
  </Button>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="primary"
    className="btn--outline box-content__toolbar ml-5"
    disabled={false}
    id="import_choices"
    onClick={[Function]}
  >
    <i
      className="fa fa-upload"
    />
     
    <FormattedMessage
      id="import"
      values={Object {}}
    />
  </Button>
</div>
`;

exports[`<ProposalUserVoteItem /> should render correctly without choices 1`] = `
<div
  className="form-group"
  id="questions_choice_panel_personal"
>
  <Connect(injectIntl(QuestionChoiceAdminModal))
    formName="formName"
    isCreating={true}
    member={null}
    onClose={[Function]}
    onSubmit={[Function]}
    show={false}
    type="type"
  />
  <ListGroup
    bsClass="list-group"
  />
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="primary"
    className="btn--outline box-content__toolbar"
    disabled={false}
    id="add-answer-in-question-button"
    onClick={[Function]}
  >
    <i
      className="fa fa-plus-circle"
    />
     
    <FormattedMessage
      id="global.add"
      values={Object {}}
    />
  </Button>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="primary"
    className="btn--outline box-content__toolbar ml-5"
    disabled={false}
    id="import_choices"
    onClick={[Function]}
  >
    <i
      className="fa fa-upload"
    />
     
    <FormattedMessage
      id="import"
      values={Object {}}
    />
  </Button>
</div>
`;

exports[`<QuestionAdmin /> render correctly a checkbox question 1`] = `
<Row
  bsClass="row"
  componentClass="div"
>
  <Col
    bsClass="col"
    className="d-flex align-items-center"
    componentClass="div"
    xs={8}
  >
    <QuestionAdmin__ItemQuestionWrapper>
      <i
        className="cap cap-android-menu"
        style={
          Object {
            "color": "#aaaaaa",
            "fontSize": "20px",
          }
        }
      />
    </QuestionAdmin__ItemQuestionWrapper>
    <QuestionAdmin__ItemQuestionWrapper>
      <Icon
        name="askBubble"
        size={20}
      />
    </QuestionAdmin__ItemQuestionWrapper>
    <QuestionAdmin__ItemQuestionWrapper
      ellipsis={true}
    >
      <strong>
        Question Title
      </strong>
      <br />
      <span
        className="excerpt"
      >
        <FormattedMessage
          id="global.question.types.multiple_multiple"
          values={Object {}}
        />
      </span>
    </QuestionAdmin__ItemQuestionWrapper>
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    xs={4}
  >
    <QuestionAdmin__ActionIconWrapper>
      <ButtonToolbar
        bsClass="btn-toolbar"
        className="action-icons pull-right"
      >
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="default"
          className="btn-edit-item"
          disabled={false}
          id="js-btn-edit-0"
          onClick={[Function]}
        >
          <Icon
            color="rgb(3, 136, 204)"
            name="pen"
            size={16}
          />
        </Button>
        <ButtonQuickAction
          icon="TRASH"
          id="js-btn-trash-0"
          label={
            <FormattedMessage
              id="global.delete"
              values={Object {}}
            />
          }
          onClick={[Function]}
          variantColor="danger"
        />
      </ButtonToolbar>
    </QuestionAdmin__ActionIconWrapper>
  </Col>
</Row>
`;

exports[`<QuestionAdmin /> render correctly a medias question 1`] = `
<Row
  bsClass="row"
  componentClass="div"
>
  <Col
    bsClass="col"
    className="d-flex align-items-center"
    componentClass="div"
    xs={8}
  >
    <QuestionAdmin__ItemQuestionWrapper>
      <i
        className="cap cap-android-menu"
        style={
          Object {
            "color": "#aaaaaa",
            "fontSize": "20px",
          }
        }
      />
    </QuestionAdmin__ItemQuestionWrapper>
    <QuestionAdmin__ItemQuestionWrapper>
      <Icon
        name="askBubble"
        size={20}
      />
    </QuestionAdmin__ItemQuestionWrapper>
    <QuestionAdmin__ItemQuestionWrapper
      ellipsis={true}
    >
      <strong>
        Question Title
      </strong>
      <br />
      <span
        className="excerpt"
      >
        <FormattedMessage
          id="gender.other"
          values={Object {}}
        />
      </span>
    </QuestionAdmin__ItemQuestionWrapper>
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    xs={4}
  >
    <QuestionAdmin__ActionIconWrapper>
      <ButtonToolbar
        bsClass="btn-toolbar"
        className="action-icons pull-right"
      >
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="default"
          className="btn-edit-item"
          disabled={false}
          id="js-btn-edit-0"
          onClick={[Function]}
        >
          <Icon
            color="rgb(3, 136, 204)"
            name="pen"
            size={16}
          />
        </Button>
        <ButtonQuickAction
          icon="TRASH"
          id="js-btn-trash-0"
          label={
            <FormattedMessage
              id="global.delete"
              values={Object {}}
            />
          }
          onClick={[Function]}
          variantColor="danger"
        />
      </ButtonToolbar>
    </QuestionAdmin__ActionIconWrapper>
  </Col>
</Row>
`;

exports[`<QuestionAdmin /> render correctly a section 1`] = `
<Row
  bsClass="row"
  componentClass="div"
>
  <Col
    bsClass="col"
    className="d-flex align-items-center"
    componentClass="div"
    xs={8}
  >
    <QuestionAdmin__ItemQuestionWrapper>
      <i
        className="cap cap-android-menu"
        style={
          Object {
            "color": "#aaaaaa",
            "fontSize": "20px",
          }
        }
      />
    </QuestionAdmin__ItemQuestionWrapper>
    <QuestionAdmin__ItemQuestionWrapper>
      <Icon
        name="textStyle"
        size={20}
      />
    </QuestionAdmin__ItemQuestionWrapper>
    <QuestionAdmin__ItemQuestionWrapper
      ellipsis={true}
    >
      <strong>
        Section Title
      </strong>
      <br />
      <span
        className="excerpt"
      >
        <FormattedMessage
          id="global.question.types.section"
          values={Object {}}
        />
      </span>
    </QuestionAdmin__ItemQuestionWrapper>
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    xs={4}
  >
    <QuestionAdmin__ActionIconWrapper>
      <ButtonToolbar
        bsClass="btn-toolbar"
        className="action-icons pull-right"
      >
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="default"
          className="btn-edit-item"
          disabled={false}
          id="js-btn-edit-0"
          onClick={[Function]}
        >
          <Icon
            color="rgb(3, 136, 204)"
            name="pen"
            size={16}
          />
        </Button>
        <ButtonQuickAction
          icon="TRASH"
          id="js-btn-trash-0"
          label={
            <FormattedMessage
              id="global.delete"
              values={Object {}}
            />
          }
          onClick={[Function]}
          variantColor="danger"
        />
      </ButtonToolbar>
    </QuestionAdmin__ActionIconWrapper>
  </Col>
</Row>
`;

exports[`<QuestionAdmin /> render correctly a text question 1`] = `
<Row
  bsClass="row"
  componentClass="div"
>
  <Col
    bsClass="col"
    className="d-flex align-items-center"
    componentClass="div"
    xs={8}
  >
    <QuestionAdmin__ItemQuestionWrapper>
      <i
        className="cap cap-android-menu"
        style={
          Object {
            "color": "#aaaaaa",
            "fontSize": "20px",
          }
        }
      />
    </QuestionAdmin__ItemQuestionWrapper>
    <QuestionAdmin__ItemQuestionWrapper>
      <Icon
        name="askBubble"
        size={20}
      />
    </QuestionAdmin__ItemQuestionWrapper>
    <QuestionAdmin__ItemQuestionWrapper
      ellipsis={true}
    >
      <strong>
        Question Title
      </strong>
      <br />
      <span
        className="excerpt"
      >
        <FormattedMessage
          id="global.question.types.free"
          values={Object {}}
        />
      </span>
    </QuestionAdmin__ItemQuestionWrapper>
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    xs={4}
  >
    <QuestionAdmin__ActionIconWrapper>
      <ButtonToolbar
        bsClass="btn-toolbar"
        className="action-icons pull-right"
      >
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="default"
          className="btn-edit-item"
          disabled={false}
          id="js-btn-edit-0"
          onClick={[Function]}
        >
          <Icon
            color="rgb(3, 136, 204)"
            name="pen"
            size={16}
          />
        </Button>
        <ButtonQuickAction
          icon="TRASH"
          id="js-btn-trash-0"
          label={
            <FormattedMessage
              id="global.delete"
              values={Object {}}
            />
          }
          onClick={[Function]}
          variantColor="danger"
        />
      </ButtonToolbar>
    </QuestionAdmin__ActionIconWrapper>
  </Col>
</Row>
`;
